gl31-master/src/test/deca/context/valid/sansobjet/affect_int_int.deca
// Description:
//    Affectation et typage : associe un int a un int
//
// Resultats:
//    Ligne 15: Affectation de types compatibles
//
// Historique:
//    cree le 08/01/2021

{
   int a;
   int b;

   // Doit etre accepte.
   a = b;
}
