gl31-master/src/test/deca/context/invalid/sansobjet/affect_int_void.deca
// Description:
//    Affectation et typage : associe un int a un void
//
// Resultats:
//    Ligne 15: Affectation de types incompatibles.
//
// Historique:
//    cree le 08/01/2021

{
   void a;
   int b;

   // Doit etre refuse.
   a = b;
}
